Name:                glew
Version:             0.1.0
Cabal-Version:       >= 1.2
Synopsis:            GLEW mini-binding
Category:            graphics
Description:
  Glew is a Haskell binding to a (currently very small) subset of GLEW
  (<http://glew.sourceforge.net>).
  .
  &#169; 2009 by Ivan Tomac & Conal Elliott; GPLv3 license.
Author:              Ivan Tomac & Conal Elliott
Maintainer:          conal@conal.net
Homepage:            http://haskell.org/haskellwiki/glew
Package-Url:         http://code.haskell.org/~conal/code/glew
Copyright:           (c) 2009 by Ivan Tomac & Conal Elliott
License:             GPL
License-File:        COPYING
Stability:           experimental
build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, array, OpenGL>=2.4.0.1, GLUT
  Exposed-Modules:     
                       Graphics.Glew
                       
  ghc-options:         -Wall

  extra-libraries:     GLEW

--  ghc-prof-options:    -prof -auto-all 
